<resources>
    <string name="complete_E_KYC">Complete E-KYC</string>
    <string name="form_60">Form 60</string>
    <string name="customer_mobile">Customer Mobile Number <font color='#FF0000'>*</font></string>
    <string name="contact_number">Contact Number</string>
    <string name="aadhaar_num">Aadhaar Number/VID <font color='#FF0000'>*</font></string>
    <string name="pan_num">Pan Number <font color='#FF0000'>*</font></string>
    <string name="enter_otp">Enter OTP <font color='#FF0000'>*</font></string>
    <string name="resend_otp">Resend OTP</string>
    <string name="consent_language">Consent Language <font color='#FF0000'>*</font></string>
    <string name="devices">Devices <font color='#FF0000'>*</font></string>
    <string name="authentication">Select Authentication Options <font color='#FF0000'>*</font></string>
    <string name="select_device">Select Device <font color='#FF0000'>*</font></string>
    <string name="loreum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="icon">icon</string>
    <string name="ok">OK</string>
    <string name="sdk_version">v 1.9</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="do_you_have_pan">Do You Have PAN No ?<font color='#FF0000'>*</font></string>
    <string name="father_name">"Enter Father's Name <font color='#FF0000'>*</font>"</string>
    <string name="mother_name">"Enter Mother's Name <font color='#FF0000'>*</font>"</string>
    <string name="agricultural_income">Enter Agricultural Income <font color='#FF0000'>*</font></string>
    <string name="other_then_agricultural_income">Enter Other Than Agricultural Income <font color='#FF0000'>*</font></string>
    <string name="signature">Proceed</string>
    <string name="download">Download PDF</string>
    <string name="signature_form">Signature Form</string>
    <string name="do_you_have_pan_applied">Do You Have PAN Applied ? <font color='#FF0000'>*</font></string>
    <string name="pan_acknowledgement_number">Enter PAN Acknowledgement Number <font color='#FF0000'>*</font></string>
    <string name="pan_acknowledgement_date">Enter PAN Acknowledgement Date <font color='#FF0000'>*</font></string>
    <string name="play_audio">Play Audio</string>
    <string name="stop_audio">Stop Audio</string>

    <string-array name="language_array">
        <item>Select Language</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>

    <string-array name="devices_array">
        <item>Select Device</item>
        <item>Morpho</item>
        <item>Mantra</item>
        <item>Startek</item>
        <item>Aratek</item>
    </string-array>

</resources>