<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Form60Activity">
    <Toolbar
        android:id="@+id/tbBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorDarkBlue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back_24"
                android:layout_marginEnd="@dimen/dp10">
            </ImageView>

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_60"
                android:textSize="@dimen/dp17"
                android:textColor="@color/white_color" />
            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/sdk_version"
                android:textSize="@dimen/dp13"
                android:textColor="@color/white_color"
                android:layout_marginEnd="@dimen/dp10"/>

        </LinearLayout>

    </Toolbar>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbBar"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:text=""
        android:textColor="@color/black" />

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvContent"
        android:layout_above="@+id/linearLayout"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/dp10"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tvSignature"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:text="@string/signature"
            android:textColor="@color/white_color" />
        <TextView
            android:id="@+id/tvDownload"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp5"
            android:text="@string/download"
            android:textColor="@color/white_color" />
    </LinearLayout>
</RelativeLayout>