<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KycActivity">

    <Toolbar
        android:id="@+id/tbMain"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorDarkBlue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complete E-KYC"
                android:textSize="@dimen/dp17"
                android:textColor="@color/white_color" />


        </LinearLayout>

    </Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvKyc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="vertical"
            android:theme="@style/Theme.SpsSdk">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlMobileNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_mobile"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNo"
                    style="@style/edittext_style"
                    android:inputType="number"
                    android:enabled="false"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlAadhaarNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:hint="@string/aadhaar_num"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAadhaarNo"
                    style="@style/edittext_style"
                    android:inputType="number"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPanNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:hint="@string/pan_num"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPanNo"
                    style="@style/edittext_style"
                    android:maxLength="10"
                    android:textAllCaps="true"
                    android:inputType="textCapCharacters"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlOtp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:hint="@string/enter_otp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOtp"
                    style="@style/edittext_style"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvOtpSendMessage"
                    style="@style/TextViewStyle"
                    android:layout_marginTop="@dimen/dp5"
                    android:gravity="start"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:tag="binding_6"
                    android:text=""
                    android:textColor="@color/red_color" />

                <TextView
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvResendOtp"
                    style="@style/TextViewStyle"
                    android:layout_marginTop="@dimen/dp5"
                    android:gravity="end"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:tag="binding_6"
                    android:text="@string/resend_otp"
                    android:textColor="@color/colorLightBlue" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/dp15"
                android:gravity="start"
                android:tag="binding_6"
                android:text="@string/consent_language"
                android:textColor="@color/colorLightBlue" />

            <Spinner
                android:id="@+id/spnConsentLanguage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:background="@drawable/spinner_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/dp15"
                android:gravity="start"
                android:text="@string/devices"
                android:textColor="@color/colorLightBlue" />

            <Spinner
                android:id="@+id/spnDevices"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:background="@drawable/spinner_background" />

            <LinearLayout
                android:id="@+id/llConsent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp20"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbConsent"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/tvConsentContent"
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp20"
                    android:textSize="@dimen/dp12"
                    android:text="" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvSubmit"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:drawableRight="@drawable/arrow_forward"
                android:gravity="center"
                android:padding="@dimen/dp5"
                android:text="Complete your KYC"
                android:textColor="@color/white_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp20">
            <TextView
                android:id="@+id/tvPoweredBY"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp12"
                android:text="© Powered by" />
            <ImageView
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp17"
                android:src="@drawable/pw_money_logo"
                android:orientation="vertical"/>
        </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>